Update WhatsApp contact link in index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ box-shadow:0 8px 20px rgba(0,0,0,.4)
     Trusted guidance for disabled, hacked & restricted Instagram accounts.
     Official • Safe • Transparent support
   </p>
-  <a href="https://wa.me/919876543210?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery.">
+  <a href="https://wa.me/91 96303 62569?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery.">
     Contact on WhatsApp
   </a>
 </div>
