--- a/index.html
+++ b/index.html
@@ -3,89 +3,147 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Instagram Account Recovery Service</title>
+<title>Instagram Account Recovery</title>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif}
-body{background:#0f0f14;color:#eaeaea;line-height:1.6}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Segoe UI,sans-serif}
+body{background:#0c0c14;color:#fff;line-height:1.6}
+
+/* GLOW */
+.glow{text-shadow:0 0 6px rgba(255,255,255,.4)}
+.icon-glow{text-shadow:0 0 8px rgba(253,29,29,.8)}
 
 /* HERO */
 .hero{
+padding:90px 20px;
+text-align:center;
 background:linear-gradient(120deg,#833ab4,#fd1d1d,#fcb045);
-padding:90px 20px;text-align:center;color:#fff
 }
-.hero h1{font-size:40px;font-weight:700}
+.hero h1{font-size:40px}
 .hero p{margin-top:15px;font-size:18px;max-width:750px;margin:auto}
-.hero a{
-display:inline-block;margin-top:35px;padding:14px 38px;
-background:#000;color:#fff;text-decoration:none;
-font-weight:600;border-radius:30px
+
+/* BUTTONS */
+.btn{
+display:inline-block;
+margin:15px;
+padding:14px 38px;
+border-radius:30px;
+text-decoration:none;
+font-weight:600;
+color:#fff;
+background:#000;
+box-shadow:0 0 15px rgba(0,0,0,.6);
 }
 
 /* SECTIONS */
 section{max-width:1100px;margin:auto;padding:80px 20px}
-h2{text-align:center;font-size:32px;margin-bottom:25px}
+h2{text-align:center;font-size:32px;margin-bottom:30px}
 
 /* CARDS */
 .cards{
-display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
-gap:22px;margin-top:40px
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
+gap:22px;
 }
 .card{
-background:#1b1b24;padding:28px;border-radius:14px;
-border:1px solid #2a2a38
+background:#14141f;
+padding:28px;
+border-radius:14px;
+border:1px solid #2a2a38;
+box-shadow:0 0 15px rgba(255,255,255,.05);
 }
 .card h3{margin-bottom:10px}
 
 /* STEPS */
 .steps li{
-list-style:none;background:#1b1b24;margin:12px 0;
-padding:16px;border-radius:10px
+list-style:none;
+margin:12px 0;
+padding:16px;
+background:#14141f;
+border-radius:10px;
+box-shadow:0 0 12px rgba(255,255,255,.05);
 }
 
 /* TESTIMONIALS */
 .testimonials{
-display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:20px;margin-top:40px
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+gap:20px;
 }
 .testimonial{
-background:#161620;padding:22px;border-radius:12px;
-border:1px solid #26263a;font-size:15px
+background:#14141f;
+padding:22px;
+border-radius:12px;
+box-shadow:0 0 15px rgba(255,255,255,.05);
 }
 
 /* FORM */
 form{
-max-width:500px;margin:40px auto 0;
-display:flex;flex-direction:column;gap:15px
+max-width:500px;
+margin:40px auto 0;
+display:flex;
+flex-direction:column;
+gap:15px;
 }
-form input, form textarea{
-padding:12px;border:none;border-radius:6px;font-size:15px
+input,textarea{
+padding:12px;
+border:none;
+border-radius:6px;
 }
-form button{
-padding:12px;border:none;border-radius:25px;
-background:#fd1d1d;color:#fff;font-size:16px;font-weight:600;
-cursor:pointer
+button{
+padding:12px;
+border:none;
+border-radius:25px;
+background:#fd1d1d;
+color:#fff;
+font-weight:600;
+box-shadow:0 0 12px rgba(253,29,29,.8);
 }
 
 /* DISCLAIMER */
 .disclaimer{
-background:#14141d;padding:28px;border-radius:12px;
-font-size:14px;color:#aaa;text-align:center
+background:#111;
+padding:28px;
+border-radius:12px;
+font-size:14px;
+text-align:center;
+color:#aaa;
+box-shadow:0 0 10px rgba(255,255,255,.05);
 }
 
 /* FOOTER */
 footer{
-text-align:center;padding:25px;background:#09090d;
-font-size:13px;color:#777
+text-align:center;
+padding:25px;
+background:#08080d;
+font-size:13px;
+color:#777;
 }
 
-/* WHATSAPP BUTTON */
+/* FLOATING BUTTONS */
 .whatsapp{
-position:fixed;bottom:20px;right:20px;
-background:#25D366;color:#fff;
-padding:14px 18px;border-radius:50px;
-text-decoration:none;font-weight:600;
-box-shadow:0 8px 20px rgba(0,0,0,.4)
+position:fixed;
+bottom:20px;
+right:20px;
+background:#25D366;
+color:#fff;
+padding:16px 20px;
+border-radius:50px;
+text-decoration:none;
+box-shadow:0 0 18px rgba(37,211,102,.9);
+}
+.instagram{
+position:fixed;
+bottom:80px;
+right:20px;
+background:#fd1d1d;
+color:#fff;
+padding:16px 20px;
+border-radius:50px;
+text-decoration:none;
+box-shadow:0 0 18px rgba(253,29,29,.9);
 }
 </style>
 </head>
@@ -93,69 +151,77 @@ box-shadow:0 8px 20px rgba(0,0,0,.4)
 <body>
 
 <div class="hero">
-  <h1>Instagram Account Recovery Service</h1>
-  <p>
-    Trusted guidance for disabled, hacked & restricted Instagram accounts.
-    Official • Safe • Transparent support
-  </p>
-  <a href="https://wa.me/91 96303 62569?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery.">
-    Contact on WhatsApp
-  </a>
+<h1 class="glow"><i class="fa-brands fa-instagram icon-glow"></i> Instagram Account Recovery</h1>
+<p class="glow">
+Disabled • Hacked • Action Block • Shadowban<br>
+Safe • Official • Trusted Support
+</p>
+
+<a class="btn glow" href="https://wa.me/919630362569?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery">
+<i class="fa-brands fa-whatsapp"></i> WhatsApp Us
+</a>
+
+<a class="btn glow" href="https://www.instagram.com/a3rr1s?igsh=MWphcWp2bHljcXd3eg==" target="_blank">
+<i class="fa-brands fa-instagram"></i> Instagram
+</a>
 </div>
 
 <section>
-  <h2>What We Help With</h2>
-  <div class="cards">
-    <div class="card"><h3>Disabled Accounts</h3><p>Appeal & verification guidance.</p></div>
-    <div class="card"><h3>Hacked Accounts</h3><p>Security & recovery process help.</p></div>
-    <div class="card"><h3>Action Blocks</h3><p>Temporary restriction assistance.</p></div>
-    <div class="card"><h3>Shadowban Issues</h3><p>Reach & visibility support.</p></div>
-  </div>
+<h2 class="glow">What We Help With</h2>
+<div class="cards">
+<div class="card glow"><h3><i class="fa-solid fa-ban icon-glow"></i> Disabled Accounts</h3><p>Appeal & verification guidance</p></div>
+<div class="card glow"><h3><i class="fa-solid fa-user-lock icon-glow"></i> Hacked Accounts</h3><p>Security & recovery help</p></div>
+<div class="card glow"><h3><i class="fa-solid fa-clock icon-glow"></i> Action Blocks</h3><p>Restriction removal support</p></div>
+<div class="card glow"><h3><i class="fa-solid fa-eye icon-glow"></i> Shadowban</h3><p>Reach & visibility issues</p></div>
+</div>
 </section>
 
 <section>
-  <h2>How It Works</h2>
-  <ul class="steps">
-    <li>✔ Contact us with your issue</li>
-    <li>✔ We analyze the problem</li>
-    <li>✔ Official appeal guidance</li>
-    <li>✔ Support till response</li>
-  </ul>
+<h2 class="glow">How It Works</h2>
+<ul class="steps">
+<li class="glow">✔ Contact us on WhatsApp or Instagram</li>
+<li class="glow">✔ We analyze your issue</li>
+<li class="glow">✔ Official appeal guidance</li>
+<li class="glow">✔ Support till response</li>
+</ul>
 </section>
 
 <section>
-  <h2>Client Feedback</h2>
-  <div class="testimonials">
-    <div class="testimonial">“My disabled account got response in 7 days. Proper guidance.”</div>
-    <div class="testimonial">“No fake promises. Very professional support.”</div>
-    <div class="testimonial">“Explained everything clearly. Legit service.”</div>
-  </div>
+<h2 class="glow">Client Feedback</h2>
+<div class="testimonials">
+<div class="testimonial glow">“Proper guidance. No fake promises.”</div>
+<div class="testimonial glow">“Very professional and clear support.”</div>
+<div class="testimonial glow">“My disabled account got response.”</div>
+</div>
 </section>
 
 <section>
-  <h2>Contact Us</h2>
-  <form>
-    <input type="text" placeholder="Your Name">
-    <input type="email" placeholder="Your Email">
-    <textarea rows="4" placeholder="Describe your issue"></textarea>
-    <button type="submit">Send Request</button>
-  </form>
+<h2 class="glow">Contact</h2>
+<form>
+<input type="text" placeholder="Your Name">
+<input type="email" placeholder="Your Email">
+<textarea rows="4" placeholder="Describe your issue"></textarea>
+<button type="submit">Send</button>
+</form>
 </section>
 
 <section>
-  <div class="disclaimer">
-    ⚠ Disclaimer: We are NOT affiliated with Instagram or Meta.
-    We provide guidance only and do not guarantee account recovery.
-  </div>
+<div class="disclaimer glow">
+⚠ We are NOT affiliated with Instagram or Meta.<br>
+We provide guidance only. No guarantees.
+</div>
 </section>
 
-<footer>
-  © 2026 Instagram Account Recovery Service | All Rights Reserved
+<footer class="glow">
+© 2026 Instagram Account Recovery Service
 </footer>
 
-<a class="whatsapp"
-href="https://wa.me/9196303 62569?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery.">
-WhatsApp
+<a class="whatsapp" href="https://wa.me/919630362569?text=Hello,%20I%20need%20help%20with%20my%20Instagram%20account%20recovery">
+<i class="fa-brands fa-whatsapp"></i>
+</a>
+
+<a class="instagram" href="https://www.instagram.com/a3rr1s?igsh=MWphcWp2bHljcXd3eg==" target="_blank">
+<i class="fa-brands fa-instagram"></i>
 </a>
 
 </body>
